--- a/home.html
+++ b/home.html
@@ -34,13 +34,26 @@
             <div class="features-body">
                 <div class="feature-card">
                     <div class="card-header">
-                        <span class="feature-text">Designed for the Service Cloud to let users to create and send custom surveys to get acurate
+                        <span class="feature-text">Designed for the Service Cloud to let users to create and send custom
+                            surveys to get acurate
                             feedback from customers in Salesforce Lightning Experience</span>
                     </div>
                 </div>
-                <div class="feature-card"><span class="feature-text"></span></div>
-                <div class="feature-card"><span class="feature-text"></span></div>
-                <div class="feature-card"><span class="feature-text"></span></div>
+                <div class="feature-card">
+                    <div class="card-header">
+                        <span class="feature-text">Automates business flow and provides features and interface that lets users configure how and when to send surveys by few clicks, saves users time and effort</span>
+                    </div>
+                </div>
+                <div class="feature-card">
+                    <div class="card-header">
+                        <span class="feature-text"></span>
+                    </div></span>
+                </div>
+                <div class="feature-card">
+                    <div class="card-header">
+                        <span class="feature-text"></span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
