added features and footer section

--- a/home.html
+++ b/home.html
@@ -12,12 +12,13 @@
 </head>
 
 <body>
-    <header class="header">
+    <div class="header">
         <nav class="navbar">
             <div class="logo-content">
                 <img class="logo" src="img/icons8-layers-64 (1).png" alt="">
                 <span class="logo-text">Survice App</span>
             </div>
+            <img class="sf-logo" src="img/salesforce-logo.png" alt="">
             <ul class="nav-items">
                 <li class="nav-item"><a class="nav-link" href="#">User Guide</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
@@ -25,38 +26,61 @@
             </ul>
         </nav>
         <img class="header-img" src="img/Hero Section.png" alt="">
-    </header>
-    <section class="features">
-        <div class="features-content">
-            <div class="features-title">
-                <h1 class="title">Why Survice ?</h1>
-            </div>
+    </div>
+    <div class="why-section">
+        <span class="title">Why Survice ?</span>
+        <div class="why-card"></div>
+    </div>
+    <div class="features">
+        <img class="feature-bg" src="img/sincerely-media-C9aZhnx83rA-unsplash.jpg" alt="">
+        <div class="features-container">
             <div class="features-body">
                 <div class="feature-card">
                     <div class="card-header">
-                        <span class="feature-text">Designed for the Service Cloud to let users to create and send custom
-                            surveys to get acurate
-                            feedback from customers in Salesforce Lightning Experience</span>
+                        <span class="feature-text">Designed for the Service Cloud to let users create and send custom
+                            surveys with Salesforce Lightning Experience</span>
+                    </div>
+                    <div class="card-body">
+                        <img class="card-img" src="img/Feedback Cycle (2).png" alt="">
                     </div>
                 </div>
                 <div class="feature-card">
                     <div class="card-header">
-                        <span class="feature-text">Automates business flow and provides features and interface that lets users configure how and when to send surveys by few clicks, saves users time and effort</span>
+                        <span class="feature-text">Automates business flow and provides features to let users configure how and when to send surveys by few clicks, saves users time and effort</span>
+                    </div>
+                    <div class="card-body">
+                        <img class="card-img" src="img/Frame 1 (2).png" alt="">
                     </div>
                 </div>
                 <div class="feature-card">
                     <div class="card-header">
-                        <span class="feature-text"></span>
-                    </div></span>
+                        <span class="feature-text">Provides API support to interact with your app from external services</span>
+                    </div>
+                    <div class="card-body">
+                        <img class="card-img" src="img/API (6).png" alt="">
+                    </div>
                 </div>
                 <div class="feature-card">
                     <div class="card-header">
-                        <span class="feature-text"></span>
+                        <span class="feature-text">Uses reports and dashboards to help companies track their customers satisfaction and employees performance easily</span>
+                    </div>
+                    <div class="card-body">
+                        <img class="card-img" src="img/Report (1).png" alt="">
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+    <footer>
+        <div class="container" id="footer">
+            <img class="footer-logo" src="img/icons8-layers-64 (1).png" alt="">
+            <p>&copy; 2023 Survice App. All rights reserved.</p>
+            <div class="contact-info">
+                <p>Phone : <a class="link" href="tel:+905544565780" class="email-link">+90 554 456 5780</a></p>
+                <p>Email : <a class="link" href="mailto:hasantokul@soauth.com"> hasantokul@soauth.com</a></p>
+            </div>
+        </div>
+    </footer>
 
 
 
