added new page and video demo section

--- a/home.html
+++ b/home.html
@@ -15,21 +15,23 @@
     <div class="header">
         <nav class="navbar">
             <div class="logo-content">
-                <img class="logo" src="img/icons8-layers-64 (1).png" alt="">
+                <a href="home.html"><img class="logo" src="img/icons8-layers-64 (1).png" alt=""></a>
                 <span class="logo-text">Survice App</span>
             </div>
             <img class="sf-logo" src="img/salesforce-logo.png" alt="">
             <ul class="nav-items">
                 <li class="nav-item"><a class="nav-link" href="#">User Guide</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="support.html">Support</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <img class="header-img" src="img/Hero Section.png" alt="">
     </div>
     <div class="why-section">
         <span class="title">Why Survice ?</span>
-        <div class="why-card"></div>
+        <div class="why-card">
+            <iframe width="600" height="300" src="https://www.youtube.com/embed/vDMyIZ2nsS0?si=5obnkgtTOModhFaY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
     </div>
     <div class="features">
         <img class="feature-bg" src="img/sincerely-media-C9aZhnx83rA-unsplash.jpg" alt="">
