added support page

--- a/support.html
+++ b/support.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your App Landing Page</title>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/support.css">
     <style>
         /* Inline CSS can be added here if needed */
     </style>
@@ -22,10 +22,18 @@
             <ul class="nav-items">
                 <li class="nav-item"><a class="nav-link" href="#">User Guide</a></li>
                 <li class="nav-item"><a class="nav-link" href="support.html">Support</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
             </ul>
         </nav>
-        <img class="header-img" src="img/Hero Section.png" alt="">
+        <div class="img-section">
+            <div class="img-content">
+                <img class="logo" src="img/image 16.png" alt="">
+                <span class="title">Join Our Community</span>
+                <p class="text">Join now to our Slack community for any kind of support related to Survice App</p>
+                <a target="_blank" href="https://join.slack.com/t/soauthllc/shared_invite/zt-23kzefoe9-NTVEAhfRCy6eTepE98QK4Q" class="btn-blue">Join Now</a>
+            </div>
+            <img class="header-img" src="img/Purple Gradient Geometric Flat Advertising Background Wallpaper Image For Free Download - Pngtree 1.png" alt="">
+        </div>
     </div>
     <footer>
         <div class="container" id="footer">
@@ -40,7 +48,7 @@
 
 
 
-    <script src="js/script.js"></script>
+    <script src="js/support.js"></script>
 
 </body>
 
