--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             <ul class="nav-items">
                 <li class="nav-item"><a class="nav-link" href="#">User Guide</a></li>
                 <li class="nav-item"><a class="nav-link" href="support.html">Support</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
             </ul>
         </nav>
         <img class="header-img" src="img/Hero Section.png" alt="">
@@ -86,7 +86,7 @@
 
 
 
-    <script src="js/script.js"></script>
+    <script src="js/home.js"></script>
 
 </body>
 
