--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your App Landing Page</title>
+    <title>Survice App</title>
     <link rel="stylesheet" href="css/home.css">
     <style>
         /* Inline CSS can be added here if needed */
