--- a/support.html
+++ b/support.html
@@ -15,14 +15,14 @@
     <div class="header">
         <nav class="navbar">
             <div class="logo-content">
-                <a href="home.html"><img class="logo" src="img/icons8-layers-64 (1).png" alt=""></a>
+                <a href="index.html"><img class="logo" src="img/icons8-layers-64 (1).png" alt=""></a>
                 <span class="logo-text">Survice App</span>
             </div>
             <img class="sf-logo" src="img/salesforce-logo.png" alt="">
             <ul class="nav-items">
                 <li class="nav-item"><a class="nav-link" href="#">User Guide</a></li>
                 <li class="nav-item"><a class="nav-link" href="support.html">Support</a></li>
-                <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             </ul>
         </nav>
         <div class="img-section">
