made pages responsive

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survice App</title>
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         /* Inline CSS can be added here if needed */
     </style>
@@ -14,6 +15,7 @@
 <body>
     <div class="header">
         <nav class="navbar">
+            <i class="fa-solid fa-bars"></i>
             <div class="logo-content">
                 <a href="index.html"><img class="logo" src="img/icons8-layers-64 (1).png" alt=""></a>
                 <span class="logo-text">Survice App</span>
@@ -30,7 +32,7 @@
     <div class="why-section">
         <span class="title">Why Survice ?</span>
         <div class="why-card">
-            <iframe width="600" height="300" src="https://www.youtube.com/embed/vDMyIZ2nsS0?si=5obnkgtTOModhFaY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe class="video" src="https://www.youtube.com/embed/vDMyIZ2nsS0?si=5obnkgtTOModhFaY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </div>
     <div class="features">
