--- a/support.html
+++ b/support.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survice App</title>
     <link rel="stylesheet" href="css/support.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         /* Inline CSS can be added here if needed */
     </style>
@@ -14,6 +15,7 @@
 <body>
     <div class="header">
         <nav class="navbar">
+            <i class="fa-solid fa-bars"></i>
             <div class="logo-content">
                 <a href="index.html"><img class="logo" src="img/icons8-layers-64 (1).png" alt=""></a>
                 <span class="logo-text">Survice App</span>
@@ -32,7 +34,6 @@
                 <p class="text">Join now to our Slack community for any kind of support related to Survice App</p>
                 <a target="_blank" href="https://join.slack.com/t/soauthllc/shared_invite/zt-23kzefoe9-NTVEAhfRCy6eTepE98QK4Q" class="btn-blue">Join Now</a>
             </div>
-            <img class="header-img" src="img/Purple Gradient Geometric Flat Advertising Background Wallpaper Image For Free Download - Pngtree 1.png" alt="">
         </div>
     </div>
     <footer>
