--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
             <img class="sf-logo" src="img/salesforce-logo.png" alt="">
             <ul class="nav-items">
                 <li class="nav-item"><a class="nav-link" href="#">User Guide</a></li>
-                <li class="nav-item"><a class="nav-link" href="support.html">Support</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             </ul>
         </nav>
         <img class="header-img" src="img/Hero Section.png" alt="">
     </div>
-    <div class="why-section">
-        <span class="title">Why Survice ?</span>
-        <div class="why-card">
-            <iframe class="video" src="https://www.youtube.com/embed/vDMyIZ2nsS0?si=5obnkgtTOModhFaY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="support-section">
+        <div class="support-content">
+            <img class="logo" src="img/image 16.png" alt="">
+            <span class="title">Join Our Community</span>
+            <p class="text">Join now to our Slack community for any kind of support related to Survice App</p>
+            <a target="_blank" href="https://join.slack.com/t/soauthllc/shared_invite/zt-23kzefoe9-NTVEAhfRCy6eTepE98QK4Q" class="btn-blue">Join Now</a>
         </div>
     </div>
     <div class="features">
